--- a/config.json
+++ b/config.json
@@ -160,7 +160,7 @@
     "IMAGE_BONDLING_INFO": "./screenshots/Bondling/info.png",
     "IMAGE_BONDLING_BRUSH": "./screenshots/Bondling/brush.png",
     "IMAGE_BONDLING_SUMMON": "./screenshots/Bondling/summon.png",
-    "IMAGE_BONDLING_KUROFACE": "./screenshots/Bondling/kuroface.png",
+    "IMAGE_BONDLING_TOMBFACE": "./screenshots/Bondling/tombface.png",
     "IMAGE_BONDLING_PACT1": "./screenshots/Bondling/pact1.png",
     "IMAGE_BONDLING_PACT2": "./screenshots/Bondling/pact2.png",
     "IMAGE_BONDLING_PACT3": "./screenshots/Bondling/pact3.png",
