--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
   "VALUE": {
-    "FIND_IMG_DELAY": 0.01,
-    "WQ_JADE": false,
-    "WQ_COIN": false,
-    "WQ_SUSHI": false,
-    "WQ_FOOD": false
+    "FIND_IMG_DELAY": 0.06,
+    "WQ_JADE": true,
+    "WQ_COIN": true,
+    "WQ_SUSHI": true,
+    "WQ_FOOD": true
   },
   "DEFAULT": {
     "IMAGE_FINISHED0_PATH": "./screenshots/Default/finished0.png",
