--- a/config.json
+++ b/config.json
@@ -1,20 +1,21 @@
 {
   "VALUE": {
+    "LOG_LV": "DEBUG",
     "FIND_IMG_DELAY": 0.04,
-    "WQ_JADE": true,
-    "WQ_COIN": true,
-    "WQ_SUSHI": true,
-    "WQ_FOOD": true,
-    "LOG_LV": "DEBUG"
+    "WQ_JADE": false,
+    "WQ_COIN": false,
+    "WQ_SUSHI": false,
+    "WQ_FOOD": false,
+    "IDLE_TIMEOUT_MINUTES": 15
   },
   "DEFAULT": {
-    "IMAGE_FINISHED0_PATH": "./Image/Default/finished0.png",
-    "IMAGE_FINISHED1_PATH": "./Image/Default/finished1.png",
-    "IMAGE_FINISHED1S1_PATH": "./Image/Default/finished1_1.png",
-    "IMAGE_FINISHED1S2_PATH": "./Image/Default/finished1_2.png",
-    "IMAGE_FINISHED1S3_PATH": "./Image/Default/finished1_3.png",
-    "IMAGE_FINISHED2_PATH": "./Image/Default/finished2.png",
-    "IMAGE_FAILED_PATH": "./Image/Default/failed.png",
+    "IMAGE_FINISHED0": "./Image/Default/finished0.png",
+    "IMAGE_FINISHED1": "./Image/Default/finished1.png",
+    "IMAGE_FINISHED1S1": "./Image/Default/finished1_1.png",
+    "IMAGE_FINISHED1S2": "./Image/Default/finished1_2.png",
+    "IMAGE_FINISHED1S3": "./Image/Default/finished1_3.png",
+    "IMAGE_FINISHED2": "./Image/Default/finished2.png",
+    "IMAGE_FAILED": "./Image/Default/failed.png",
     "IMAGE_BUFFCN": "./Image/Default/buffcn.png",
     "IMAGE_BUFF": "./Image/Default/buff.png",
     "IMAGE_MAIL": "./Image/Default/mail.png",
@@ -32,45 +33,45 @@
     "IMAGE_EMPTY_SUSHI_CLOSE": "./Image/Default/emptyshshi_close.png"
   },
   "SOUL": {
-    "IMAGE_SINGLE_SOUL_LOCK_PATH": "./Image/Soul/lock.png",
-    "IMAGE_SINGLE_SOUL_STAT_PATH": "./Image/Soul/singlesoul.png",
-    "IMAGE_SINGLE_TOTEM_STAT_PATH": "./Image/Soul/singletotem.png",
-    "IMAGE_SOUL_STARTCN_PATH": "./Image/Soul/startcn.png",
-    "IMAGE_SOUL_INVITE_PATH": "./Image/Soul/teamInvite.png",
-    "IMAGE_SOUL_AUTOACCEPT_PATH": "./Image/Soul/autoaccept.png",
-    "IMAGE_SOUL_INVITE_CHECKBOX_PATH": "./Image/Soul/invitecheckbox.png",
-    "IMAGE_SOUL_ROOM_DETECT_PATH": "./Image/Soul/roomdetect.png"
+    "IMAGE_SINGLE_SOUL_LOCK": "./Image/Soul/lock.png",
+    "IMAGE_SINGLE_SOUL_STAT": "./Image/Soul/singlesoul.png",
+    "IMAGE_SINGLE_TOTEM_STAT": "./Image/Soul/singletotem.png",
+    "IMAGE_SOUL_STARTCN": "./Image/Soul/startcn.png",
+    "IMAGE_SOUL_INVITE": "./Image/Soul/teamInvite.png",
+    "IMAGE_SOUL_AUTOACCEPT": "./Image/Soul/autoaccept.png",
+    "IMAGE_SOUL_INVITE_CHECKBOX": "./Image/Soul/invitecheckbox.png",
+    "IMAGE_SOUL_ROOM_DETECT": "./Image/Soul/roomdetect.png"
   },
   "EXPLORE": {
-    "IMAGE_STORY_ACCEPT_PATH": "./Image/Story/accept.png",
-    "IMAGE_STORY_FIGHT_PATH": "./Image/Story/fight.png",
-    "IMAGE_STORY_FIGHT_BOSS_PATH": "./Image/Story/fightBoss.png",
-    "IMAGE_STORY_BACK_PATH": "./Image/Story/back.png",
-    "IMAGE_STORY_GET_REWARD_PATH": "./Image/Story/getReward.png",
-    "IMAGE_STORY_CHERRY_CAKE_PATH": "./Image/Story/cherryCake.png",
-    "IMAGE_STORY_LIST_CHAPTER_PATH": "./Image/Story/listchapter.png",
-    "IMAGE_STORY_BOX_PATH": "./Image/Story/box.png",
-    "IMAGE_STORY_REWARD_CONFIRMEDCN_PATH": "./Image/Story/rewardConfirmedcn.png"
+    "IMAGE_STORY_ACCEPT": "./Image/Story/accept.png",
+    "IMAGE_STORY_FIGHT": "./Image/Story/fight.png",
+    "IMAGE_STORY_FIGHT_BOSS": "./Image/Story/fightBoss.png",
+    "IMAGE_STORY_BACK": "./Image/Story/back.png",
+    "IMAGE_STORY_GET_REWARD": "./Image/Story/getReward.png",
+    "IMAGE_STORY_CHERRY_CAKE": "./Image/Story/cherryCake.png",
+    "IMAGE_STORY_LIST_CHAPTER": "./Image/Story/listchapter.png",
+    "IMAGE_STORY_BOX": "./Image/Story/box.png",
+    "IMAGE_STORY_REWARD_CONFIRMEDCN": "./Image/Story/rewardConfirmedcn.png"
   },
   "CN": {
-    "IMAGE_READY_PATH": "./Image/MultiServ/readycn.png",
-    "IMAGE_SOUL_INVITE_DIALOG_PATH": "./Image/MultiServ/inviteDialogcn.png",
-    "IMAGE_STORY_LEAD_PATH": "./Image/MultiServ/leadcn.png",
-    "IMAGE_STORY_START_PATH": "./Image/MultiServ/startcn.png",
-    "IMAGE_STORY_REWARD_CONFIRMED_PATH": "./Image/MultiServ/rewardConfirmedcn.png",
-    "IMAGE_STORY_AUTOFOOD_PATH": "./Image/MultiServ/autofoodcn.png",
-    "IMAGE_STORY_LIMIT_PATH": "./Image/MultiServ/limitcn.png",
+    "IMAGE_READY": "./Image/MultiServ/readycn.png",
+    "IMAGE_SOUL_INVITE_DIALOG": "./Image/MultiServ/inviteDialogcn.png",
+    "IMAGE_STORY_LEAD": "./Image/MultiServ/leadcn.png",
+    "IMAGE_STORY_START": "./Image/MultiServ/startcn.png",
+    "IMAGE_STORY_REWARD_CONFIRMED": "./Image/MultiServ/rewardConfirmedcn.png",
+    "IMAGE_STORY_AUTOFOOD": "./Image/MultiServ/autofoodcn.png",
+    "IMAGE_STORY_LIMIT": "./Image/MultiServ/limitcn.png",
     "IMAGE_SOULMAX": "./Image/MultiServ/soulmaxcn.png",
     "IMAGE_COOP2_SEAL": "./Image/MultiServ/coopwanted2cn.png",
     "IMAGE_CHATDETECT": "./Image/MultiServ/chatdetectcn.png",
     "IMAGE_CHATSTICKER": "./Image/MultiServ/chatsticker.png",
-    "IMAGE_SOUL_START_PATH": "./Image/MultiServ/soulstartcn.png",
-    "IMAGE_SOUL_PETREWARD_PATH": "./Image/MultiServ/petrewardcn.png",
+    "IMAGE_SOUL_START": "./Image/MultiServ/soulstartcn.png",
+    "IMAGE_SOUL_PETREWARD": "./Image/MultiServ/petrewardcn.png",
     "IMAGE_REALM_EMPTY_TICKET": "./Image/RealmRaid/emptycn.png",
-    "IMAGE_REALM_RAID_PATH": "./Image/RealmRaid/realmRaidcn.png",
-    "IMAGE_REALM_ATK_PATH": "./Image/RealmRaid/atkcn.png",
-    "IMAGE_REALM_REFRESH_PATH": "./Image/RealmRaid/refreshcn.png",
-    "IMAGE_REALM_GUILD_PATH": "./Image/RealmRaid/guildcn.png",
+    "IMAGE_REALM_RAID": "./Image/RealmRaid/realmRaidcn.png",
+    "IMAGE_REALM_ATK": "./Image/RealmRaid/atkcn.png",
+    "IMAGE_REALM_REFRESH": "./Image/RealmRaid/refreshcn.png",
+    "IMAGE_REALM_GUILD": "./Image/RealmRaid/guildcn.png",
     "IMAGE_REALM_CANCEL": "./Image/RealmRaid/cancelcn.png",
     "IMAGE_REALM_CANCEL_BATTLE": "./Image/RealmRaid/cancelcn.png",
     "IMAGE_BUFF": "./Image/Default/buffcn.png",
@@ -81,24 +82,24 @@
     "IMAGE_INBATTLE": "./Image/Default/inbattlecn.png"
   },
   "GB": {
-    "IMAGE_READY_PATH": "./Image/MultiServ/ready.png",
-    "IMAGE_SOUL_INVITE_DIALOG_PATH": "./Image/MultiServ/inviteDialog.png",
-    "IMAGE_STORY_LEAD_PATH": "./Image/MultiServ/lead.png",
-    "IMAGE_STORY_START_PATH": "./Image/MultiServ/start.png",
-    "IMAGE_STORY_REWARD_CONFIRMED_PATH": "./Image/MultiServ/rewardConfirmed.png",
-    "IMAGE_STORY_AUTOFOOD_PATH": "./Image/MultiServ/autofood.png",
-    "IMAGE_STORY_LIMIT_PATH": "./Image/MultiServ/limit.png",
+    "IMAGE_READY": "./Image/MultiServ/ready.png",
+    "IMAGE_SOUL_INVITE_DIALOG": "./Image/MultiServ/inviteDialog.png",
+    "IMAGE_STORY_LEAD": "./Image/MultiServ/lead.png",
+    "IMAGE_STORY_START": "./Image/MultiServ/start.png",
+    "IMAGE_STORY_REWARD_CONFIRMED": "./Image/MultiServ/rewardConfirmed.png",
+    "IMAGE_STORY_AUTOFOOD": "./Image/MultiServ/autofood.png",
+    "IMAGE_STORY_LIMIT": "./Image/MultiServ/limit.png",
     "IMAGE_SOULMAX": "./Image/MultiServ/soulmax.png",
     "IMAGE_COOP2_SEAL": "./Image/MultiServ/coopwanted2.png",
     "IMAGE_CHATDETECT": "./Image/MultiServ/chatdetect.png",
     "IMAGE_CHATSTICKER": "./Image/MultiServ/chatsticker.png",
-    "IMAGE_SOUL_START_PATH": "./Image/MultiServ/soulstart.png",
-    "IMAGE_SOUL_PETREWARD_PATH": "./Image/MultiServ/petreward.png",
+    "IMAGE_SOUL_START": "./Image/MultiServ/soulstart.png",
+    "IMAGE_SOUL_PETREWARD": "./Image/MultiServ/petreward.png",
     "IMAGE_REALM_EMPTY_TICKET": "./Image/RealmRaid/empty.png",
-    "IMAGE_REALM_RAID_PATH": "./Image/RealmRaid/realmRaid.png",
-    "IMAGE_REALM_ATK_PATH": "./Image/RealmRaid/atk.png",
-    "IMAGE_REALM_REFRESH_PATH": "./Image/RealmRaid/refresh.png",
-    "IMAGE_REALM_GUILD_PATH": "./Image/RealmRaid/guild.png",
+    "IMAGE_REALM_RAID": "./Image/RealmRaid/realmRaid.png",
+    "IMAGE_REALM_ATK": "./Image/RealmRaid/atk.png",
+    "IMAGE_REALM_REFRESH": "./Image/RealmRaid/refresh.png",
+    "IMAGE_REALM_GUILD": "./Image/RealmRaid/guild.png",
     "IMAGE_REALM_CANCEL": "./Image/RealmRaid/cancel.png",
     "IMAGE_REALM_CANCEL_BATTLE": "./Image/RealmRaid/cancelbattle.png",
     "IMAGE_BUFF": "./Image/Default/buff.png",
@@ -109,24 +110,24 @@
     "IMAGE_INBATTLE": "./Image/Default/inbattle.png"
   },
   "JP": {
-    "IMAGE_READY_PATH": "./Image/MultiServ/readyjp.png",
-    "IMAGE_SOUL_INVITE_DIALOG_PATH": "./Image/MultiServ/inviteDialogjp.png",
-    "IMAGE_STORY_LEAD_PATH": "./Image/MultiServ/leadjp.png",
-    "IMAGE_STORY_START_PATH": "./Image/MultiServ/startjp.png",
-    "IMAGE_STORY_REWARD_CONFIRMED_PATH": "./Image/MultiServ/rewardConfirmedjp.png",
-    "IMAGE_STORY_AUTOFOOD_PATH": "./Image/MultiServ/autofoodjp.png",
-    "IMAGE_STORY_LIMIT_PATH": "./Image/MultiServ/limitjp.png",
+    "IMAGE_READY": "./Image/MultiServ/readyjp.png",
+    "IMAGE_SOUL_INVITE_DIALOG": "./Image/MultiServ/inviteDialogjp.png",
+    "IMAGE_STORY_LEAD": "./Image/MultiServ/leadjp.png",
+    "IMAGE_STORY_START": "./Image/MultiServ/startjp.png",
+    "IMAGE_STORY_REWARD_CONFIRMED": "./Image/MultiServ/rewardConfirmedjp.png",
+    "IMAGE_STORY_AUTOFOOD": "./Image/MultiServ/autofoodjp.png",
+    "IMAGE_STORY_LIMIT": "./Image/MultiServ/limitjp.png",
     "IMAGE_SOULMAX": "./Image/MultiServ/soulmaxjp.png",
     "IMAGE_COOP2_SEAL": "./Image/MultiServ/coopwanted2jp.png",
     "IMAGE_CHATDETECT": "./Image/MultiServ/chatdetectjp.png",
     "IMAGE_CHATSTICKER": "./Image/MultiServ/chatsticker.png",
-    "IMAGE_SOUL_START_PATH": "./Image/MultiServ/soulstartjp.png",
-    "IMAGE_SOUL_PETREWARD_PATH": "./Image/MultiServ/petrewardjp.png",
+    "IMAGE_SOUL_START": "./Image/MultiServ/soulstartjp.png",
+    "IMAGE_SOUL_PETREWARD": "./Image/MultiServ/petrewardjp.png",
     "IMAGE_REALM_EMPTY_TICKET": "./Image/RealmRaid/empty.png",
-    "IMAGE_REALM_RAID_PATH": "./Image/RealmRaid/realmRaidcn.png",
-    "IMAGE_REALM_ATK_PATH": "./Image/RealmRaid/atkjp.png",
-    "IMAGE_REALM_REFRESH_PATH": "./Image/RealmRaid/refreshjp.png",
-    "IMAGE_REALM_GUILD_PATH": "./Image/RealmRaid/guildjp.png",
+    "IMAGE_REALM_RAID": "./Image/RealmRaid/realmRaidcn.png",
+    "IMAGE_REALM_ATK": "./Image/RealmRaid/atkjp.png",
+    "IMAGE_REALM_REFRESH": "./Image/RealmRaid/refreshjp.png",
+    "IMAGE_REALM_GUILD": "./Image/RealmRaid/guildjp.png",
     "IMAGE_REALM_CANCEL": "./Image/RealmRaid/canceljp.png",
     "IMAGE_REALM_CANCEL_BATTLE": "./Image/RealmRaid/cancelbattlejp.png",
     "IMAGE_BUFF": "./Image/Default/buff.png",
@@ -137,22 +138,22 @@
     "IMAGE_INBATTLE": "./Image/Default/inbattlejp.png"
   },
   "REALM": {
-    "IMAGE_REALM_FN3R_PATH": "./Image/RealmRaid/finished3Realm.png",
-    "IMAGE_REALM_JADE_PATH": "./Image/RealmRaid/jade.png",
-    "IMAGE_REALM_CANTATTK_PATH": "./Image/RealmRaid/cantattk.png",
-    "IMAGE_REALM_SECTION_PATH": "./Image/RealmRaid/section.png",
-    "IMAGE_REALM_SECTION2_PATH": "./Image/RealmRaid/section2.png",
-    "IMAGE_REALM_SECTIONFROG_PATH": "./Image/RealmRaid/frogsection.png",
-    "IMAGE_REALM_KO_PATH": "./Image/RealmRaid/ko2.png",
-    "IMAGE_REALM_3RAID_PATH": "./Image/RealmRaid/3raid.png",
-    "IMAGE_REALM_3RAIDFROG_PATH": "./Image/RealmRaid/3raidfrog.png",
-    "IMAGE_REALM_3RAID2_PATH": "./Image/RealmRaid/3raid2.png",
-    "IMAGE_REALM_GUILDEMPTY_PATH": "./Image/RealmRaid/guildempty.png",
-    "IMAGE_REALM_GUILDSCROLL_PATH": "./Image/RealmRaid/guildscroll.png",
-    "IMAGE_REALM_GUILDPAGEEND_PATH": "./Image/RealmRaid/guildpageend.png",
-    "IMAGE_REALM_GUILDPAGEEND_TOP_PATH": "./Image/RealmRaid/guildpageendtop.png",
-    "IMAGE_REALM_PROFILE_PATH": "./Image/RealmRaid/profile.png",
-    "IMAGE_REALM_LOCK_PATH": "./Image/RealmRaid/lock.png",
+    "IMAGE_REALM_FN3R": "./Image/RealmRaid/finished3Realm.png",
+    "IMAGE_REALM_JADE": "./Image/RealmRaid/jade.png",
+    "IMAGE_REALM_CANTATTK": "./Image/RealmRaid/cantattk.png",
+    "IMAGE_REALM_SECTION": "./Image/RealmRaid/section.png",
+    "IMAGE_REALM_SECTION2": "./Image/RealmRaid/section2.png",
+    "IMAGE_REALM_SECTIONFROG": "./Image/RealmRaid/frogsection.png",
+    "IMAGE_REALM_KO": "./Image/RealmRaid/ko2.png",
+    "IMAGE_REALM_3RAID": "./Image/RealmRaid/3raid.png",
+    "IMAGE_REALM_3RAIDFROG": "./Image/RealmRaid/3raidfrog.png",
+    "IMAGE_REALM_3RAID2": "./Image/RealmRaid/3raid2.png",
+    "IMAGE_REALM_GUILDEMPTY": "./Image/RealmRaid/guildempty.png",
+    "IMAGE_REALM_GUILDSCROLL": "./Image/RealmRaid/guildscroll.png",
+    "IMAGE_REALM_GUILDPAGEEND": "./Image/RealmRaid/guildpageend.png",
+    "IMAGE_REALM_GUILDPAGEEND_TOP": "./Image/RealmRaid/guildpageendtop.png",
+    "IMAGE_REALM_PROFILE": "./Image/RealmRaid/profile.png",
+    "IMAGE_REALM_LOCK": "./Image/RealmRaid/lock.png",
     "IMAGE_REALM_EMPTY_TICKET1": "./Image/RealmRaid/empty1.png",
     "IMAGE_REALM_RAID_FAILED": "./Image/RealmRaid/raidfailed.png",
     "IMAGE_REALM_CLOSE": "./Image/RealmRaid/close.png"
@@ -166,7 +167,8 @@
     "IMAGE_EVENT_LOCKED": "./Image/Event/ev_lineup_locked.png",
     "IMAGE_EVENT_ATT": "./Image/Event/att.png",
     "IMAGE_EVENT_TARGET": "./Image/Event/target.png",
-    "IMAGE_EVENT_TARGET2": "./Image/Event/target2.png"
+    "IMAGE_EVENT_TARGET2": "./Image/Event/target2.png",
+    "IMAGE_EVENT_REWARD": "./Image/Event/reward.png"
   },
   "BONDLING": {
     "IMAGE_BONDLING_BONDLING": "./Image/Bondling/bondling.png",
