--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
   "VALUE": {
     "LOG_LV": "DEBUG",
     "FIND_IMG_DELAY": 0.04,
-    "WQ_JADE": false,
-    "WQ_COIN": false,
-    "WQ_SUSHI": false,
-    "WQ_FOOD": false,
+    "WQ_JADE": true,
+    "WQ_COIN": true,
+    "WQ_SUSHI": true,
+    "WQ_FOOD": true,
     "IDLE_TIMEOUT_MINUTES": 15
   },
   "DEFAULT": {
